--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "async-validator": "^3.3.0",
     "core-js": "^3.6.5",
+    "less-loader": "^6.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
