--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async-validator": "^3.3.0",
     "core-js": "^3.6.5",
     "less-loader": "^6.2.0",
+    "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
