--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "less-loader": "^6.2.0",
     "svg-sprite-loader": "^5.0.0",
+    "swiper": "^6.0.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
